@startuml

abstract class AbstractFlyingObject
abstract class AbstractAircraft
abstract class BaseBullet
abstract class BaseProp

class HeroAircraft
class MobEnemy
class EliteEnemy
class VeteranEnemy
class AceEnemy
class BossEnemy

class HeroBullet
class EnemyBullet

class BloodProp
class BulletProp
class BulletPlusProp
class BombProp
class FreezeProp

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- BaseProp

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- VeteranEnemy
AbstractAircraft <|-- AceEnemy
AbstractAircraft <|-- BossEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

BaseProp <|-- BloodProp
BaseProp <|-- BulletProp
BaseProp <|-- BulletPlusProp
BaseProp <|-- BombProp
BaseProp <|-- FreezeProp

@enduml
